all user tests passed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "extends": [
         "airbnb-base",
@@ -46,7 +47,8 @@
         {
           "ts": "never"
         }
-      ]
+      ],
+      "import/no-extraneous-dependencies": ["error", {"devDependencies": ["**/*.test.ts", "**/*.test.tsx", "**/jest.*"]}]
     },
     "settings": {
       "import/resolver": {
